# CC_Ass5

./: README.md
doc/: Doxyfile
latex/: Makefile  assignment5.tex
src/: CMakeLists.txt  Coord.h  EndText.h  EvilVirus.h  FlavourText.h  GameObject.h  GameState.h  MinParticle.h  MySDL.h  Particle.h  Player.h  PlusParticle.h  RainParticle.h  Text.h  Unit.h  Utils.h  Virus.h  VirusGame.cpp
submission/src/: CMakeLists.txt  EndAnimation.h  EndText.h  FireworkParticle.h  GameObject.h  GameState.h  Makefile  MinParticle.h  Particle.h  Player.h  PlusParticle.h  Text.h  Virus.h
